External-Services-for-B2C-Commerce/force-app/main/default/objects/Contact/fields/B2C_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>B2C_Customer_Id__c</fullName>
    <externalId>true</externalId>
    <label>B2C Customer Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>