External-Services-for-B2C-Commerce/force-app/main/default/objects/Contact/fields/B2C_Run_Matches__c.field-meta.xml
<CustomField>
    <fullName>B2C_Run_Matches__c</fullName>
    <defaultValue>false</defaultValue>
    <label>B2C Run Matches</label>
    <type>Checkbox</type>
</CustomField>